Set random wallpaper using Project Panama