@@ -13,6 +13,18 @@ java {
     }
 }
 
+tasks.withType<JavaCompile> {
+    options.compilerArgs = listOf("--add-modules=jdk.incubator.foreign")
+}
+
 application {
     mainClass.set("shamsasari.wallhavenplugin.WallhavenPlugin")
+    applicationDefaultJvmArgs = listOf(
+        "--add-modules=jdk.incubator.foreign",
+        "--enable-native-access=ALL-UNNAMED"
+    )
+}
+
+dependencies {
+    implementation("com.fasterxml.jackson.core:jackson-databind:2.13.3")
 }
